:art: 优化minio工具类